# recall-ai

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt
backend/: __init__.py  api_client.py  attachments.py  memory.py  tools.py
config/: __init__.py  prompts.py  settings.py
database/: __init__.py  db.py
frontend/: __init__.py  components.py  styles.py
