[project]
name = "recall-ai"
version = "0.1.0"
description = "100-Turn Memory Chatbot powered by MiniMax × Qubrid AI"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.40.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
    "ddgs>=9.11.4",
]

[tool.uv]
dev-dependencies = []
